Fixing minor spacing issue in storybook.

--- a/src/styles/includes/_utilities.scss
+++ b/src/styles/includes/_utilities.scss
@@ -19,6 +19,6 @@
     cursor: pointer;
 }
 
-.mt-25 {
-    margin-top: 25px;
+.mb-25 {
+    margin-bottom: 25px;
 }
